# haochen.lu

./: .dockerignore  .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  .stylelintrc.json  .trivyignore  .yamllint.yml  AGENTS.md  AUTH.md  CLAUDE.md  DEV_ENVIRONMENT.md  DOCKER.md  Dockerfile  Dockerfile.dev  ENVIRONMENT_SETUP.md  LICENSE.md  README.md  SECURITY_SCANNING.md  TEST_FIXES_SUMMARY.md  TRUENAS_DEPLOYMENT.md  analyze-security-report.py  collect_deps.py  contact.html  courselist.html  dev.sh  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  frontpage.css  index.html  mystyle.css  nginx.conf  nginx.conf.dev  nginx.conf.example  package-lock.json  package.json  (+6 more)
.github/: dependabot.yml
.github/scripts/: parse-security-reports.py  (+1 more)
admin/: content-manager.html
backend/: Dockerfile  Dockerfile.dev  alembic.ini  docker-entrypoint.sh  pyproject.toml  pytest.ini  test_simple.py
backend/alembic/: env.py
backend/alembic/versions/: 001_add_variants_column.py  001_initial_schema.py  002_add_access_level_to_photos.py  002_add_project_repository_fields.py  002_enhance_photo_metadata.py  002_remove_legacy_columns.py  003_add_access_level_to_photos.py  003_add_camera_and_lens_alias_tables.py  004_add_camera_and_lens_alias_tables.py  004_add_profile_pictures_table.py  005_add_hero_images_table.py  005_add_profile_pictures_table.py  006_add_hero_images_table.py  006_add_order_to_projects.py  007_add_project_images.py  008_add_github_url.py  008_fix_project_images_schema.py  009_migrate_to_fastapi_users.py  010_add_unique_aliases.py  011_remove_section_titles.py  012_remove_photo_fields.py  013_oidc_auth.py  013_seed_about_me_markdown.py  014_casdoor_sso.py  014_seed_about_me_markdown.py  015_add_subapp_admin_url.py  015_remove_show_in_menu.py  016_add_logged_in_only.py  017_remove_application_credentials.py  017_rm_app_creds.py  018_add_files_table.py  019_add_system_settings_table.py  387eb86420f6_add_camera_and_lens_alias_tables.py  63ad70aefe32_create_camera_and_lens_alias_tables_.py
backend/app/: config.py  database.py  dependencies.py  main.py  users.py
backend/app/api/: app_integration.py  applications.py  auth.py  blog.py  camera_aliases.py  content.py  files.py  hero_images.py  lens_aliases.py  locations.py  photos.py  profile_pictures.py  projects.py  settings.py  subapp_integration.py  subapps.py
backend/app/core/: email_utils.py  exceptions.py  exif.py  file_access.py  file_passthrough_processor.py  file_validation.py  image_processor.py  location_service.py  oidc.py  progress.py  rate_limiter.py  redis.py  repository_service.py  runtime_settings.py  security.py  upload_pipeline.py  vips_processor.py
backend/app/crud/: __init__.py  application.py  blog.py  content.py  file.py  hero_image.py  photo.py  profile_picture.py  project.py  subapp.py  user.py
backend/app/models/: __init__.py  application.py  blog.py  camera_alias.py  content.py  file.py  hero_image.py  lens_alias.py  location.py  photo.py  profile_picture.py  project.py  project_image.py  subapp.py  system_setting.py  user.py
backend/app/schemas/: __init__.py  app_config.py  application.py  auth.py  blog.py  camera_alias.py  content.py  file.py  hero_image.py  lens_alias.py  locations.py  photo.py  profile_picture.py  project.py  subapp.py  subapp_config.py  user.py
backend/app/services/: alias_service.py  image_processor.py  location_service.py
backend/app/types/: __init__.py  access_control.py  images.py
backend/tests/: conftest.py  factories.py  pyproject-local.ini
backend/tests/fixtures/: create_test_images.py  security_fixtures.py
backend/tests/fixtures/mock-oidc/: certs  discovery.json
backend/tests/integration/: conftest.py  seed_integration_data.py
backend/tests/integration/api/: test_blog_integration.py  test_files_integration.py  test_location_validation.py  test_locations_api.py  test_locations_integration.py  test_metadata_parallel.py  test_photos_api.py  test_photos_integration.py  test_profile_pictures_api.py  test_projects_api.py  test_projects_integration.py
backend/tests/integration/auth/: conftest.py  test_auth_integration.py  test_auth_sso_integration.py  test_session_api.py
backend/tests/integration/database/: test_database_transactions.py
backend/tests/integration/image/: test_image_integration.py
backend/tests/integration/photo/: test_photo_upload_gps_workflow.py
backend/tests/mocks/: __init__.py  redis_mock.py
backend/tests/performance/: test_load_performance.py
backend/tests/security/: conftest.py  test_advanced_session_security.py  test_session_security.py
backend/tests/unit/api/: test_settings.py
backend/tests/unit/auth/: test_auth_unit.py  test_oidc_validator.py  test_redis_integration.py  test_security_hardening.py  test_token_manager.py
backend/tests/unit/core/: test_exif.py  test_file_access.py  test_system_config_service.py
backend/tests/unit/image/: test_enhanced_exif_processing.py  test_image_processing_unit.py  test_production_image_processor.py
backend/tests/unit/services/: test_blog_service.py  test_location_service.py  test_location_validation.py  test_portfolio_service.py
backend/tests/unit/upload/: test_file_passthrough_processor.py  test_file_validator.py  test_upload_pipeline.py  test_upload_security_unit.py
backend/tests/utils/: security_utils.py
casdoor/: init_data.json
data/: photography.json  projects.json
docker/: Dockerfile  Dockerfile.dev  nginx.conf  nginx.conf.dev
docs/: AUTH.md  FILES.md  IMAGE_VARIANT_BUG.md  TRUENAS_DEPLOYMENT.md
frontend/: .dockerignore  .prettierrc  Dockerfile  Dockerfile.dev  Dockerfile.nginx.dev  components.json  docker-entrypoint.sh  eslint.config.js  index.html  lint_output.txt  nginx.conf  nginx.conf.dev  nginx.conf.template  package-lock.json  package.json  playwright.config.ts  stylelint.config.js  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
keycloak/: arcadia-realm.json
server/: app.js
subapps/: registry.yml
(+221 files in other folders)
